Overflow issue

--- a/client/src/components/Views/Inventory/InventoryTable/ItemOptions/ItemOptions.module.scss
+++ b/client/src/components/Views/Inventory/InventoryTable/ItemOptions/ItemOptions.module.scss
@@ -1,5 +1,6 @@
 .itemOptionsWrapper {
   position: relative;
+  overflow: visible;
   .optionsModal {
     position: absolute; // Make it absolute
     top: 75%; // Align it to the bottom of the parent
